--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,72 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root{
+    --bg-color: #F2EFEB;
+    --sec-color: #D9C8B4;
+    --txt-main-color: #403C3A;
+    --txt-sec-color: #BEBDBF;
+}
+
 body{
-    background-color: #712626;
-    font-family: Arial, sans-serif;
+    background-color: var(--bg-color);
+    color: eb5e23;
+    font-family: "Raleway",Arial, sans-serif;
     margin: 0;
     padding: 0;
+}
+
+nav{
+    background-color: var(--sec-color);
+    color: var(--txt-main-color);
+    text-align: center;
+    padding: 5px;
+    display: flex;
+    justify-content: space-around;
+
+}
+
+#logo{
+    width: 100px;
+    height: 100px;
+    margin: 0;
+    display: flex;
+    text-decoration: none;
+}
+
+#logo span{
+    color: var(--bg-color);
+    font-size: 70px;
+    position: relative;
+}
+
+#logo span:nth-of-type(1){
+    z-index: 0;
+    left: 10px;
+}
+
+#logo img{
+    z-index: 1;
+    position: relative;
+    right: 60px;
+}
+
+#logo span:nth-of-type(2){
+    z-index: 10;
+    right: 90px;
+}
+
+#logo:hover > img{
+    visibility: hidden;
+    transform: rotateY(90deg);
+    transition: ease-in 0.5s;
+}
+
+header > nav > button{
+    background-color: transparent;
+    color: var(--txt-main-color);
+    font-size: large;
+    border: none;
+    padding: 5px;
+    margin: 5px;
+    cursor: pointer;
 }
