--- a/src/styles.css
+++ b/src/styles.css
@@ -11,11 +11,13 @@
     font-family: "Raleway",Arial, sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body{
     background-color: var(--fg-color);
     color: eb5e23;
+    overflow-x: hidden;
 }
 
 nav{
@@ -91,4 +93,94 @@ header > nav  button:hover{
 header > nav  button.selected{
     background-color: var(--fg-color);
     color: var(--bg-sec-color);
+}
+
+#content{
+    color: var(--fg-sec-color);
+}
+
+#content h1{
+    font-size: 3rem;
+    font-weight: 200;
+    text-align: center;
+    margin: 2rem 0;
+}
+
+#content p{
+    font-size: 1.5rem;
+    font-weight: 100;
+    margin: 1rem 10%;
+    text-align: left;
+
+}
+
+.slider{
+    display: flex;
+    margin: 4rem 0 0 0;
+    width: 100%;
+    padding: 0;
+    height: 20rem;
+}
+
+.slider:after{
+    content: "We make delicious food here!";
+    width: 100%;
+    z-index: -1;
+    position: absolute;
+    right: 0;
+    top: 70%;
+    transform: translateY(-50%);
+    font-size: 2rem;
+    color: var(--fg-sec-color);
+    font-weight: 100;
+    text-transform: uppercase;
+    letter-spacing: 0.4rem;
+    animation: autoRun 30s linear;
+    animation-delay: 0s;
+}
+
+.slider .list{
+    display: flex;
+    width: 100%;
+    min-width: calc(40rem * 5);
+    position: relative;
+}
+
+.slider .list .item{
+    width: 25rem;
+    height: 20rem;
+    position: absolute;
+    left: 100%;
+    animation: autoRun 30s linear infinite;
+    animation-delay: calc((30s / 10) * (var(--position) - 1));
+}
+
+.slider .list .item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@keyframes autoRun{
+    from{
+        left: 100%;
+    }
+    to{
+        left: calc(20rem * -1);
+    }
+}
+
+.slider:hover .item{
+    animation-play-state: paused!important;
+}
+
+footer{
+    color: var(--fg-sec-color);
+    text-align: left;
+    padding: 3rem 0 0 1rem;
+}
+
+footer a{
+    color: var(--fg-sec-color);
+    text-decoration: none;
 }
